libgc (1:7.4.0-1) experimental; urgency=medium

  * New upstream version
  * Drops another batch of internal symbols

 -- Christoph Egger <christoph@debian.org>  Mon, 23 Dec 2013 13:30:28 +0100

libgc (1:7.2d-6) unstable; urgency=medium

  * Run full autoreconf during build
     (Closes: #732349)

 -- Christoph Egger <christoph@debian.org>  Mon, 23 Dec 2013 12:29:01 +0100

libgc (1:7.2d-5) unstable; urgency=low

  * Add Replaces: libgc1c3 for Ubuntu
  * Import symbol diffs from debian-ports

 -- Christoph Egger <christoph@debian.org>  Wed, 03 Jul 2013 22:14:42 +0200

libgc (1:7.2d-4) unstable; urgency=low

  * Import refined symbols for arm and mips

 -- Christoph Egger <christoph@debian.org>  Tue, 02 Jul 2013 17:35:01 +0200

libgc (1:7.2d-3) unstable; urgency=low

  * Upload to unstable 
    * 7.2 misses some private symbols which are now properly hidden by
      libgc and were unused by other software in debian
  * Generate Symbols file by pkg-kde helper scripts

 -- Christoph Egger <christoph@debian.org>  Mon, 01 Jul 2013 22:48:07 +0200

libgc (1:7.2d-2) experimental; urgency=low

  * Improve symbols file using pkg-kde-tools

 -- Christoph Egger <christoph@debian.org>  Sun, 09 Jun 2013 16:33:34 +0200

libgc (1:7.2d-1) experimental; urgency=low

  * New upstream release (Closes: #673965)
  * Add build-dependency for pkg-config to allow detection of libatomic_ops
  * Import patch Christian M. Amsüss to enable multiarch (Closes: #687493)

 -- Christoph Egger <christoph@debian.org>  Sun, 09 Jun 2013 13:26:37 +0200

libgc (1:7.1-9.1) unstable; urgency=low

  * Non-maintainer upload.
  * libgc-dev.preinst: handle symlink replaced by a directory on upgrade from
    Squeeze (Closes: #696073)

 -- David Prévot <taffit@debian.org>  Wed, 26 Dec 2012 19:49:03 -0400

libgc (1:7.1-9) unstable; urgency=medium

  * Import patches to fix CVE-2012-2673 from upstream git (Closes: #677195)

 -- Christoph Egger <christoph@debian.org>  Sun, 08 Jul 2012 18:27:48 +0200
