@@ -8,11 +8,10 @@ DEB_HOST_MULTIARCH ?= $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
 LDFLAGS += -pthread
 
 %:
-	dh $@ --with pkgkde_symbolshelper
+	dh $@ --with pkgkde_symbolshelper,autoreconf
 
 override_dh_auto_configure:
 	[ ! -d libatomic_ops-1.2 ] || mv libatomic_ops-1.2 libatomic_ops-1.2.bak
-	autoconf
 	./configure \
 		$(CONFIG_OPTS) \
 		--enable-cplusplus \
@@ -26,9 +25,6 @@ override_dh_auto_configure:
 		--host=$(DEB_HOST_GNU_TYPE) \
 		--build=$(DEB_BUILD_GNU_TYPE) \
 		--libdir=\$${prefix}/lib/$(DEB_HOST_MULTIARCH)
-
-override_dh_autoreconf:
-	dh_autoreconf ./autogen.sh
 
 override_dh_auto_test:
 	$(MAKE) check
