@@ -1,3 +1,4 @@
+  * Switch to dh-autoreconf
 libgc (1:7.4.0-1) experimental; urgency=medium
 
   * New upstream version
